[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.0.0"
anyhow = "1.0.97"
atty = "0.2.14"
axum = "0.8.3"
axum-response-cache = "0.2.0"
cached = "0.55.1"
clap = { version = "4.5.35", features = ["derive"] }
derive-getters = "0.5.0"
dirs = "6.0.0"
hyper = "1.6.0"
meilisearch-sdk = "0.28.0"
moka = { version = "0.12.10", features = ["future"] }
pulldown-cmark = "0.13.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["compression-full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ulid = { version = "1.2.1", features = ["serde"] }
