[package]
name = "website"
version = "0.2.0"
description = "A self contained website creator and server with zero conf simplicity."
authors = ["Fredrik Söderström <tirithen@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2024"
rust-version = "1.86"
readme = "README.md"
homepage = "https://github.com/tirithen/website"
repository = "https://github.com/tirithen/website"
documentation = "https://docs.rs/website"
keywords = ["website", "web", "webserver"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
ammonia = "4.0.0"
anyhow = "1.0.97"
atty = "0.2.14"
axum = "0.8.3"
axum-response-cache = "0.2.0"
cached = "0.55.1"
clap = { version = "4.5.35", features = ["derive"] }
derive-getters = "0.5.0"
dirs = "6.0.0"
duration-str = "0.17.0"
heed = "0.22.0"
hyper = "1.6.0"
jwalk = "0.8.1"
lazy_static = "1.5.0"
moka = { version = "0.12.10", features = ["future"] }
notify = "8.0.0"
notify-debouncer-full = "0.5.0"
obkv = "0.3.0"
phf = { version = "0.11.3", features = ["macros"] }
pulldown-cmark = "0.13.0"
rayon = "1.10.0"
regex = "1.11.1"
roaring = { version = "0.10.12" }
rust-embed = { version = "8.6.0", features = ["axum-ex", "interpolate-folder-path"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["compression-full", "fs", "set-header"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ulid = { version = "1.2.1", features = ["serde"] }
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }

[build-dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
rust-embed = { version = "8.6.0", features = ["axum-ex", "interpolate-folder-path"] }
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
